# court-watch

./: README.md  pyproject.toml  temp_test.py
src/courtwatch/: cli.py  display.py  fetch.py
